# Miguel_Robo

./: README.md
Navigation/: BEHAVIOR_TREE_GUIDE.md  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  INTEGRATION_FIXES.md  README.md  README_NAV2.md  SAFETY.md  SLAM_GUIDE.md  SROS2_GUIDE.md  TIME_SYNC_GUIDE.md  package.xml
Navigation/config/: cartographer_config.lua  ekf_params.yaml  nav2_params.yaml  sensors_config.yaml  slam_params.yaml
Navigation/config/behavior_trees/: navigate_through_poses_w_safety.xml  navigate_w_safety.xml
Navigation/docs/: API.md  ARCHITECTURE.md  INDEX.md  SENSORS.md  TESTING.md
Navigation/include/: certified_params_validator.hpp  ethercat_driver.hpp  lifecycle_utils.hpp
Navigation/launch/: launch.py  launch_cartographer.py  launch_sensors.py  launch_slam.py  launch_slam_nav.py  launch_with_nav2.py
Navigation/scripts/: save_map.py  validate_build.ps1  validate_integration.sh
Navigation/src/: certified_params_validator.cpp  command_arbitrator_node.cpp  command_mux_node.cpp  ethercat_driver.cpp  main.cpp  safety_supervisor_node.cpp  teleop_joy.cpp
Navigation/test/: test_command_arbitrator.cpp  test_command_mux.cpp  test_safety_supervisor.cpp
Navigation/urdf/: ultrabot.urdf.xacro
